Fixed bug #78868 (Calling __autoload() with incorrect EG(fake_scope) value)